samples/_failures_safe/1761329759_10a7c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c190db7.c: In function ‘main’:
./samples/SAFE/__tmp_9c190db7.c:166:5: error: expected declaration or statement at end of input
  166 |     free_matrix(&a);
      |     ^~~~~~~~~~~
